Closed
Bug 411875
Opened 17 years ago
Closed 17 years ago
Kotoeri (Japanese IM) crashes when using Firefox on Mac OS X (10.5.*)
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9
People
(Reporter: louise6380, Assigned: masayuki)
Details
(Keywords: inputmethod, intl, jp-critical)
Attachments
(5 files)
|
24.78 KB,
text/plain
|
Details | |
|
24.90 KB,
text/plain
|
Details | |
|
25.14 KB,
text/plain
|
Details | |
|
25.13 KB,
text/plain
|
Details | |
|
3.06 KB,
patch
|
jaas
:
review+
roc
:
superreview+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-us) AppleWebKit/523.10.3 (KHTML, like Gecko) Version/3.0.4 Safari/523.10
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3pre) Gecko/2008010904 Firefox/2.0.0.11 ID:2008010904
Kotoeri ( Japanese IM) crashes when using trunk on Mac OS X (10.5.1).
Confirmed with both Intel platform and PPC platform.
I will attach crash report.
Reproducible: Always
Steps to Reproduce:
1.Launch Firefox and turn Kotoeri on
2.Input Japanese text in text input (search box, location bar, html text input)
3.
Actual Results:
After conducting Japanese text input several times, it will no longer input Japanese text even when Kotoeri is turned on.
Expected Results:
When Kotoeri is turned on, Japanese text should be typed.
Comment 1•17 years ago
|
||
I'm pretty sure your build identifier is incorrect. What build were you using? Firefox 2.0.0.11 or a recent trunk nightly?
Sorry the build ID I entered in description was wrong. Below is the correct ID.
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3pre) Gecko/2008010904 Minefield/3.0b3pre ID:2008010904
Version: unspecified → Trunk
I'm changing severity to critical for this bug is about crashes.
Please change it if it is inappropriate.
Severity: normal → critical
Sorry my first crash report was logged in Mac OS X 10.5. I wasn't aware that this Mac was not updated to 10.5.1.
But I saw this crash of Kotoeri on the other Mac which was running Mac OS X 10.5.1 before.
Now I have updated to 10.5.1 and was able to reproduce this.
Attaching new crash log.
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3pre) Gecko/2008012704 Minefield/3.0b3pre ID:2008012704
Reported to Apple per comment #3 of http://bugzilla.mozilla.gr.jp/show_bug.cgi?id=6005
<rdar://problem/5709901>
It may not have any thing to do with this bug but I am using OS X with the language setting set to "English" and using Kotoeri (Japanese input).
Keywords: intl,
jp-critical
Comment 10•17 years ago
|
||
Do you perhaps get a breakpad id of the crash?
http://kb.mozillazine.org/Breakpad
| Reporter | ||
Comment 11•17 years ago
|
||
(In reply to comment #10)
> Do you perhaps get a breakpad id of the crash?
> http://kb.mozillazine.org/Breakpad
>
Sorry if I am wrong but my understanding is that Firefox only sends crash report when Firefox crashes, no?
I checked the Crash Report folder and about:crash but I couldn't find a report that matches the time that Kotoeri crashed.
It is the Japanese IM(Kotoeri) that crashes and Minefield keeps on running after the Kotoeri crashed.
After the crash of Kotoeri, I can still browse with Minefield but I am no longer able to type Japanese text.
Comment 12•17 years ago
|
||
Oh, sorry, I thought that Firefox crashed.
Isn't this a problem with Kotoeri then? I guess you should inform the Kotoeri developers then (in case they can be informed).
Comment 13•17 years ago
|
||
Anything in Console.log ?
| Reporter | ||
Comment 14•17 years ago
|
||
(In reply to comment #12)
> Oh, sorry, I thought that Firefox crashed.
> Isn't this a problem with Kotoeri then? I guess you should inform the Kotoeri
> developers then (in case they can be informed).
>
I'm sorry, I'm really not a techie person (I can hardly read through the crash
report) so I thought it might be something with the Firefox since it only
happened when using Firefox.
I don't know if there is anything I could do more than just reporting to
Apple's bug tracking system..
(In reply to comment #13)
> Anything in Console.log ?
>
Thanks, I'll attach my latest log from ~/Library/Logs/CrashReporter if that's what you mean by Console.log.
| Reporter | ||
Comment 15•17 years ago
|
||
Comment 16•17 years ago
|
||
When you open Console.app (In /Applications>Utilities), and click on the 'show log list' to open the sidebar; select 'console messages'. Can you see additional logging by Firefox/Minefield at the time of a crash ? (you may need to scroll up quite a bit, that thing is quite verbose on 10.5...) (try using the search field: 'firefox' as keyword to filter out the noise)
| Reporter | ||
Comment 17•17 years ago
|
||
(In reply to comment #16)
I only have the Console message within the time span of one day.
I haven't experienced this crash today so this might not be related but it says
3/3/08 10:46:02 AM [0x0-0x7c07c].org.mozilla.firefox Mon Mar 3 10:46:02 louise-macbook.local firefox-bin[906] <Error>: CGBitmapContextCreateImage: invalid context
several times.
and also
3/3/08 10:55:03 AM [0x0-0xa00a0].org.mozilla.firefox Mon Mar 3 10:55:03 louise-macbook.local firefox-bin[989] <Error>: CGBitmapContextCreateImage: invalid context
3/3/08 3:36:51 PM [0x0-0xb30b3].org.mozilla.firefox Mon Mar 3 15:36:51 louise-macbook.local firefox-bin[1113] <Error>: CGBitmapContextCreateImage: invalid context
Summary: Kotoeri (Japanese IM) crashes when using Firefox on Mac OS X (10.5.1) → Kotoeri (Japanese IM) crashes when using Firefox on Mac OS X (10.5.*)
Updated•17 years ago
|
Product: Firefox → Core
QA Contact: general → general
Assignee: nobody → joshmoz
Component: General → Widget: Cocoa
QA Contact: general → cocoa
| Reporter | ||
Comment 18•17 years ago
|
||
I just encountered this crash and succeeded in fetching console logs.
I will attach the Kotoeri crash report of this crash also.
Here's the console messages filtered by "firefox"
3/4/08 2:08:13 AM firefox-bin[1354] ****** Returning nil _server **********
3/4/08 2:08:13 AM [0x0-0xd50d5].org.mozilla.firefox 2008-03-04 02:08:13.239 firefox-bin[1354:10b] ****** Returning nil _server **********
3/4/08 2:08:13 AM firefox-bin[1354] [IMKInputSession handleEvent:] exception caught.
NSInvalidReceivePortException : connection went invalid while waiting for a reply
3/4/08 2:08:13 AM [0x0-0xd50d5].org.mozilla.firefox 2008-03-04 02:08:13.605 firefox-bin[1354:10b] [IMKInputSession handleEvent:] exception caught.
3/4/08 2:08:13 AM [0x0-0xd50d5].org.mozilla.firefox NSInvalidReceivePortException : connection went invalid while waiting for a reply
| Reporter | ||
Comment 19•17 years ago
|
||
additionally, Console messages filtered by "Kotoeri"
3/4/08 2:08:09 AM [0x0-0xb00b].com.apple.inputmethod.Kotoeri[95] deref NULL
3/4/08 2:08:11 AM com.apple.launchd[62] ([0x0-0xb00b].com.apple.inputmethod.Kotoeri[95]) Exited abnormally: Bus error
| Assignee | ||
Comment 20•17 years ago
|
||
The all crash log said calling AEDisposeDesc is the cause. That cause should not be ours.
| Reporter | ||
Comment 21•17 years ago
|
||
Could it be that something Firefox is doing is making a bug in Kotoeri surface? Because as long as I stay away from using Firefox, I never have this crash.
There should be quite a number of Japanese users testing Firefox 3 by now but it's weird I don't hear much about this problem in other Japanese forums.
Maybe my environment is a rare case.
I'm using an English keyboard and use ctrl+space shortcut to switch IM for both Macbook and PPC G5.
| Assignee | ||
Comment 22•17 years ago
|
||
We find a bug of our code. This suppress to crash the Kotoeri.
Current code send the commit message to Kotoeri at setMarkedText with 0 length. However, that may re-run the commit event in Kotoeri. Therefore, Kotoeri may dispose the event twice, and crash it.
We should not fire the commit message to IMEs. It is only needed for calling the insertText that sends compositionEnd event to Gecko.
Therefore, we should commit the IME trunsaction if setMarkedText's param length is zero. And then, we fire endComposing events to Gecko and nsTSMManager.
Assignee: joshmoz → masayuki
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #316366 -
Flags: review?(joshmoz)
| Assignee | ||
Comment 23•17 years ago
|
||
Oops, I forgot a important thing.
Thank you our Japanese testers! Their works made this patch's big hint!
| Assignee | ||
Comment 24•17 years ago
|
||
nominating to blocking 1.9.
This "issue" is important for Japanese Mac users. Kotoeri (Japanese system default IME) of 10.5 sometimes crash or stop the work. It's really Kotoeri's bug. However, we can escape from the crash bug by the latest patch. We should land this before 1.9 final.
Flags: blocking1.9?
Target Milestone: --- → mozilla1.9
Attachment #316366 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Updated•17 years ago
|
Attachment #316366 -
Flags: superreview?(roc)
Comment 25•17 years ago
|
||
Masayuki, I think we should indeed get this patch in. However, I don't think it would hold back the entire release. I'm going to ask roc to specifically review this patch, however. We should get this in in time for 1.9. Please make sure you request approval once reviews are completed.
Updated•17 years ago
|
Flags: blocking1.9? → blocking1.9-
Attachment #316366 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Comment 26•17 years ago
|
||
Comment on attachment 316366 [details] [diff] [review]
Patch v1.0
Let's take this.
Kotoei is Japanese default inputting system on Mac. (IME)
Kotoeri of 10.5 sometimes crash or stop the work. This patch suppresses the Kotoeri's bug. The risk is low.
Attachment #316366 -
Flags: approval1.9?
Comment 27•17 years ago
|
||
Comment on attachment 316366 [details] [diff] [review]
Patch v1.0
a1.9=beltzner
Attachment #316366 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Comment 28•17 years ago
|
||
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•15 years ago
|
Keywords: inputmethod
You need to log in
before you can comment on or make changes to this bug.
Description
•