Bug 411875 Kotoeri (Japanese IM) crashes when using Firefox on Mac OS X (10.5.*) r=josh, sr=roc, a1.9=beltzner